css/main.css
@-moz-viewport { width: device-width; scale: 1;}
@-ms-viewport { width: device-width; scale: 1;}
@-webkit-viewport { width: device-width; scale: 1;}
@-o-viewport { width: device-width; scale: 1;}
@viewport { width: device-width; scale: 1;}

html{
	-moz-text-size-adjust: 100%;
	-ms-text-size-adjust: 100%;
	-webkit-text-size-adjust: 100%;
	-o-text-size-adjust: 100%;
	text-size-adjust: 100%;
	box-sizing: border-box;
}

*, *:before, *:after {
	box-sizing: inherit;
}


body{
	background-color: #c0c0c0;
	margin: 0;
	padding: 0;
	font-family: sans-serif;
}

.grid img {
  width: 100%;
  margin: 0 auto;

}

li{
	list-style-type: none;
}

h2 {
	text-align: center;
}

header {
	padding-bottom: 5rem;
}

.nav-bar {
	position: absolute;
	width: 100%;
	background-color: rgba(255, 255, 255, 0.5);
	z-index:4; 
}

.hide-text {
	text-indent: 100%;
	white-space: nowrap;
	overflow: hidden;
}

.nav-btn,
.nav-btn:link,
.nav-btn:visited{
	display: block;
	position:absolute;
	top: 10px;
	right: 5%;
	height: 35px;
	width: 35px;
	background: url('../images/nav-button.svg') no-repeat center top;
	z-index: 5;
}

.nav a,
.nav a:link,
.nav a:visited{
	display: block;
	padding: 1.5rem;
	text-align: center;
	background-color: #000;
	color: #fff;
	border-top: 1px solid #fff;
}

.nav a:hover,
.nav a:focus,
.nav a:active{
	background-color: #ccc;
}

.nav ul {
	padding: 50px 0 0 0;

}

.nav-top{
	max-height: 0;
	-moz-transition: max-height 0.4s ease-out;
	-webkit-transition: max-height 0.4s ease-out;
	-o-transition: max-height 0.4s ease-out;
	transition: max-height 0.4s ease-out;
	overflow: hidden;
}

.nav-top[data-state="expanded"] {
	max-height: 20em
}

.logo {
	background-image: url('../images/place-holder.jpg');
	padding-bottom: 71.4%;
	margin-top: -15px;
	background-size: cover;
	position: relative;
}

.logo img {
	position: absolute;
	width: 40%;
	top: 50%;
    left: 50%;
    margin-right: -50%;
    -webkit-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
 
}

.about-me {
	padding-bottom: 10rem;
}


.self-portrait {
	display: block;
    margin-left: auto;
    margin-right: auto
}

.hello {
	text-align: center;
	
}

.about-desc {
	text-align: center;
	padding: 10px;
}

.work {
	padding-bottom: 10rem;
}

.portfolio-sub-imgs {
	display: none;
}

.img-description {
	text-align: center;
	max-height: 0;
	-moz-transition: max-height 0.3s ease-out;
	-webkit-transition: max-height 0.3s ease-out;
	-o-transition: max-height 0.3s ease-out;
	transition: max-height 0.3s ease-out;
	overflow: hidden;
}

.img-description[data-state="expanded"] {
	max-height: 18em;
}

.img-description-left {
	text-align: center;
	max-height: 0;
	-moz-transition: max-height 0.3s ease-out;
	-webkit-transition: max-height 0.3s ease-out;
	-o-transition: max-height 0.3s ease-out;
	transition: max-height 0.3s ease-out;
	z-index: -2;
}

.img-description-left[data-state="expanded"] {
	max-height: 18em;
}

.down-arrow{
	height: 35px;
	width: 35px;
}

/* medium */

@media only screen and (min-width:38em){

h2 {
	text-align: left;
}

.right-title {
	text-align: right;
}

.logo {
	background-image: ('../images/place-holder.jpg');
	padding-bottom: 50%;
	background-size: cover;
	position: relative;
	z-index: -1;
}

.logo img {
	width: 30%;
	
  }

.nav-btn,
.nav-btn:link,
.nav-btn:visited {
	display: none;
}

.nav-top {
	display: block;
	float: right;
	z-index: 10;
	position: relative;
}

.nav li{
	display:inline-block;
	float:none;
	margin:0;
	width:auto;	
}

.nav ul{
	padding: 0;
}

.nav a, 
.nav a:link,
.nav a:visited{
	border:0;
	background-color: rgba(255, 255, 255, 0);
	
}

.nav a:hover {
	color: #CCC;
}

.hello {
	text-align: left;
	padding-left: 10px;
	margin-bottom: -60px;
}

.about-me {
	padding: 20px;
	padding-bottom: 10rem;
}

.about-desc{
	margin-top: 5rem;
	text-align: left;
}

.work-h2 {
	text-align: center;
	padding-bottom: 5rem;
}

.down-arrow {
	display: none;
}

.img-description{
	display: block;
	text-align: left;
	padding-right: 5rem;
}

.img-description-left {
	text-align: right;
	padding-right: 10px;
	padding-left: 5rem;
}

.portfolio-img{
	padding-right: 12px;
	padding-bottom: 20px;
}

.portfolio-sub-imgs {
	display: inline-block;
	height: 20%;
	width: 20%;
}

.contact-h2 {
	text-align: center;
}



}

/* large */


@media only screen and (min-width:60em){

	.hello{
		padding: 0 0 0 10px;
		margin: 0 0 -50px 50%;
	}

	.about-desc {
		padding-right: 20rem;
	}

	.self-portrait {
		height: 450px;
		width: 450px;
		margin-right: 10px;

	}

	.img-description {
		padding-right: 10rem;
	}

	.img-description-left {
		padding-right: 10px;
		padding-left: 10rem;
	}

	.portfolio-sub-imgs {
		display: block;
		float: right;
		height: 250px;
		width: 250px;
	}
}


footer {
	text-align: center;
	padding-top: 10rem;
}

.contact-h2 {
	padding: 0;
	margin: 0;
}

.social-icons {
	list-style-type: none;
}

.social-icons li {
	display: inline-block;
	font-size: 4em;
	padding-right: 40px;
}

.social {
	opacity: 0;
	transform: translateY(100px);
}

.social-section {
	background-size: cover;
}

.fa {
	color: #FFF;
}

.js-social-animation {
	-webkit-animation: social-fade 1s linear forwards;
	-moz-webkit-animation: social-fade 1s linear forwards;
	-o-webkit-animation: social-fade 1s linear forwards;
	-ms-webkit-animation: social-fade 1s linear forwards;
	animation: social-fade 1s linear forwards;
}

@-webkit-keyframes social-fade {
	0% {
		opacity: 0;
		transform: translateY(100px);
	}

	100%{
		opacity: 1;
		transform: translateY(0px);
	}
}

@-moz-webkit-keyframes social-fade {
	0% {
		opacity: 0;
		transform: translateY(100px);
	}

	100%{
		opacity: 1;
		transform: translateY(0px);
	}
}

@-o-webkit-keyframes social-fade {
	0% {
		opacity: 0;
		transform: translateY(100px);
	}

	100%{
		opacity: 1;
		transform: translateY(0px);
	}
}

@-ms-webkit-keyframes social-fade {
	0% {
		opacity: 0;
		transform: translateY(100px);
	}

	100%{
		opacity: 1;
		transform: translateY(0px);
	}
}

@keyframes social-fade {
		0% {
		opacity: 0;
		transform: translateY(100px);
	}

	100%{
		opacity: 1;
		transform: translateY(0px);
	}
}

